@@ -58,11 +58,11 @@ if not defined ZEPPELIN_ENCODING (
 )
 
 if not defined ZEPPELIN_MEM (
-    set ZEPPELIN_MEM=-Xms1024m -Xmx1024m -XX:MaxPermSize=512m
+    set ZEPPELIN_MEM=-Xms1024m -Xmx1024m
 )
 
 if not defined ZEPPELIN_INTP_MEM (
-    set ZEPPELIN_INTP_MEM=-Xms1024m -Xmx1024m -XX:MaxPermSize=512m
+    set ZEPPELIN_INTP_MEM=-Xms1024m -Xmx1024m
 )
 
 if not defined ZEPPELIN_JAVA_OPTS (
